# api/src/controllers/eventPoaps/createEventPoapRelation.ts
@@ -1,26 +1,20 @@
 import { Controller, Route, Post, Body } from 'tsoa';
-import { requirePool, createEventPoap, ICreateEventPoapParams } from '@game/db';
+import { requirePool, createEventPoap, ICreateEventPoapParams, ICreateEventPoapResult } from '@game/db';
 import { randomUUID } from 'crypto';
 
 
 @Route('create_event_poap_relation')
 export class CreateEventPoapRelationController extends Controller {
   @Post()
-  public async post(@Body() eventPoapRelationInfo: ICreateEventPoapParams): Promise<string> {
+  public async post(@Body() eventPoapRelationInfo: ICreateEventPoapParams): Promise<ICreateEventPoapResult> {
     const pool = requirePool();
-    const relationUuid = randomUUID() as string
 
-    const eventPoapRelationToCreate = {
-      relationUuid,
-      eventUuid: eventPoapRelationInfo.eventUuid,
-      poapUuid: eventPoapRelationInfo.poapUuid
-    }
 
-    await createEventPoap.run(
-      {...eventPoapRelationToCreate},
+    const [relation] = await createEventPoap.run(
+      {...eventPoapRelationInfo},
       pool
     );
     
-    return relationUuid;
+    return relation;
   }
 }
